Added MyRigidBody and SAT

--- a/Project/Project.vcxproj
+++ b/Project/Project.vcxproj
@@ -111,6 +111,8 @@ xcopy "$(SolutionDir)include\Simplex\Shaders" "$(SolutionDir)_Binary\Shaders" /y
     <ClCompile Include="MyEntity.cpp" />
     <ClCompile Include="MyEntityManager.cpp" />
     <ClCompile Include="MyOctant.cpp" />
+    <ClCompile Include="MyRigidBody.cpp" />
+    <ClCompile Include="Wall.cpp" />
     <ClCompile Include="Zombie.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -127,6 +129,8 @@ xcopy "$(SolutionDir)include\Simplex\Shaders" "$(SolutionDir)_Binary\Shaders" /y
     <ClInclude Include="MyEntity.h" />
     <ClInclude Include="MyEntityManager.h" />
     <ClInclude Include="MyOctant.h" />
+    <ClInclude Include="MyRigidBody.h" />
+    <ClInclude Include="Wall.h" />
     <ClInclude Include="Zombie.h" />
   </ItemGroup>
   <ItemGroup>
