--- a/Project/Project.vcxproj
+++ b/Project/Project.vcxproj
@@ -113,6 +113,7 @@ xcopy "$(SolutionDir)include\Simplex\Shaders" "$(SolutionDir)_Binary\Shaders" /y
     <ClCompile Include="MyOctant.cpp" />
     <ClCompile Include="MyRigidBody.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="ScoreManager.cpp" />
     <ClCompile Include="Utility.cpp" />
     <ClCompile Include="Wall.cpp" />
     <ClCompile Include="Zombie.cpp" />
@@ -133,6 +134,7 @@ xcopy "$(SolutionDir)include\Simplex\Shaders" "$(SolutionDir)_Binary\Shaders" /y
     <ClInclude Include="MyOctant.h" />
     <ClInclude Include="MyRigidBody.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="ScoreManager.h" />
     <ClInclude Include="Utility.h" />
     <ClInclude Include="Wall.h" />
     <ClInclude Include="Zombie.h" />
